--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,44 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+
+/bin/
+/tmp/
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Code coverage profiles and other test artifacts
 *.out
-coverage.*
-*.coverprofile
-profile.cov
+vendor/
+go.sum
+*.cover
+*.profile
+*.log
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+tmp/
+build-errors.log
 
-# Go workspace file
-go.work
-go.work.sum
+Dockerfile.*
+*.dockerignore
+docker-compose.override.yml
 
-# env file
-.env
+configs/integrations.yaml
 
-# Editor/IDE
-# .idea/
-# .vscode/
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+.DS_Store
+Thumbs.db
+
+vendor/
+
+coverage.txt
+profile.out
+
+*.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
